Updated background with david's edits

--- a/proposal/aux.bib
+++ b/proposal/aux.bib
@@ -37,4 +37,7 @@
   title = {Peach Fuzzer},
   url = {http://www.peachfuzzer.com},
 }
-  
+@book{prologbook,
+  author = {{Leon Sterling}, {Ehud Y. Shapiro}},
+  title = {The Art of Prolog: Advanced Programming Techniques}
+}
