Preliminary derivability semantics

--- a/proposal/proposal.tex
+++ b/proposal/proposal.tex
@@ -7,6 +7,7 @@
 \usepackage{amsmath}
 \usepackage{wasysym}
 \usepackage{subfigure}
+\usepackage{proof}
 \usepackage{ucs}
 \usepackage[utf8x]{inputenc}
 \usepackage{enumitem}
